added endpoint for getting user contact details
